--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Universidad Rafael Belloso Chacín</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Engineer’s Degree - Computer Engineering</div>
+              <div class="subheading mb-3">Engineer’s Degree</div>
+              <div>Computer Engineering</div>
               <p>GPA: 15/20</p>
             </div>
             <div class="resume-date text-md-right">
