--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a developer, I follow a number of sci-fi and fantasy genre movies and television shows, also, I
           love playing video games.</p>
-        <p class="mb-0">I spend a large amount of my free time exploring the latest technolgy advancements in the front-end and back-end
+        <p class="mb-0">I spend a large amount of my free time exploring the latest technology advancements in the front-end and back-end
           web development world.</p>
       </div>
     </section>
