Added node icon

--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
           <li class="list-inline-item">
             <i class="devicons devicons-bower" title="Bower"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-nodejs" title="NodeJS"></i>
+          </li>
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
