Fixed links and added job description

--- a/index.html
+++ b/index.html
@@ -140,10 +140,17 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Web Developer</h3>
-            <a href="https://www.multicaja.cl/">
+            <a href="https://www.multicaja.cl/" target="_blank">
               <div class="subheading mb-3">Multicaja S.A</div>
             </a>
             <p>
+              Backend: API Rest, Java, MyBatis, Postgresql, JUnit.
+            </p>
+            <p>
+              Frontend: NodeJs, Express, Pug, HTML5, Mocha, Chai, Webdriveio.
+            </p>
+            <p>
+              Other: Swagger, User Story Mapping, Git, Jenkins, Kong, SCRUM.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -154,11 +161,18 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Full-Stack Developer</h3>
-            <a href="https://procanchas.cl/">
+            <a href="https://procanchas.cl/"  target="_blank">
               <div class="subheading mb-3">ProCanchas (Horus SPA)</div>
             </a>
-            <p>Backend: Java, SpringBoot, Spring MVC, Spring Secutiry. Frontend: AngularJS, Bootstrap, Grunt, Gulp, Sass, Angular
-              Material. Other tools: Transbank integration, Git. Methodology: SCRUM.
+            <p>
+              Backend: Java, SpringBoot, Spring MVC, Spring Secutiry.
+            </p>
+            <p>
+              Frontend: AngularJS, Bootstrap, Grunt, Gulp, Sass, Angular
+                Material. Other tools: Transbank integration, Git.
+            </p>
+            <p>
+              Methodology: SCRUM.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -169,7 +183,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Full-Stack developer</h3>
-            <a href="http://www.enviromodeling.cl">
+            <a href="http://www.enviromodeling.cl" target="_blank">
               <div class="subheading mb-3">Enviromodeling LTDA</div>
             </a>
             <p>Develop REST API with .Net Core(C#), Entity Framework, Identity Framework. Develop Console applications with
@@ -184,7 +198,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Frontend Developer</h3>
-            <a href="https://nekso.io/">
+            <a href="https://nekso.io/" target="_blank">
               <div class="subheading mb-3">Nekso</div>
             </a>
             <p>Develop AngularJs based applications using Grunt as build system and many third-party libreries as Moment, Google
@@ -214,7 +228,7 @@
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Jr Configuration Consultant</h3>
-            <a href="http://megagroupla.com/">
+            <a href="http://megagroupla.com/" target="_blank">
               <div class="subheading mb-3">Megagroup C.A</div>
             </a>
             <p>As part of configuration team , I used different EMC products as Documentum, xCP, D2. Design and configure processes
